--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -3,25 +3,21 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="com.gokhanbarisaker.osapissample.KeyboardActivity"
     tools:ignore="MergeRootFrame"
     android:orientation="vertical"
     >
 
+    <EditText android:id="@+id/edittext" android:layout_width="match_parent" android:layout_height="72dp"/>
     <Button
-        android:id="@+id/keyboard_button"
+        android:id="@+id/edittext_showbutton"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:text="Keyboard"/>
+        android:text="Show keyboard for edittext"/>
     <Button
-        android:id="@+id/device_status_button"
+        android:id="@+id/edittext_hidebutton"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:text="Device status"/>
-    <Button
-        android:id="@+id/share_button"
-        android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:text="Share"/>
+        android:text="Hide keyboard for edittext"/>
 
 </LinearLayout>
