--- a/app/src/main/res/layout/activity_device_status.xml
+++ b/app/src/main/res/layout/activity_device_status.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gokhanbarisaker.osapissample.DeviceStatusActivity"
+    tools:context="com.gokhanbarisaker.osapissample.activity.DeviceStatusActivity"
     tools:ignore="MergeRootFrame"
     android:orientation="vertical"
     android:padding="4dp"
