--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gokhanbarisaker.osapissample.KeyboardActivity"
+    tools:context="com.gokhanbarisaker.osapissample.activity.KeyboardActivity"
     tools:ignore="MergeRootFrame"
     android:orientation="vertical"
     >
